Fixed issues with IP bans